--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0"
   },
+  "homepage":"https://mikem2m.github.io/Moviefy",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
