--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "styled-components": "^4.3.2"
   },
-  "homepage":"https://mikem2m.github.io/Moviefy",
+  "homepage": "https://mikem2m.github.io/Moviefy",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
